# AutoTM

./: .dockerignore  .gitignore  Artificial_bee_colony.ipynb  Dockerfile  LICENSE  README.md  Surrogate_results  TODO_Grid_search.ipynb  TODO_PBT_tuning.ipynb  TODO_RandomSearch.ipynb  TODO_bee_colony.ipynb  TODO_gray_wolf_algorithm.ipynb  WIP_artificial_bee_colony.ipynb  WIP_bayesian_optimization .ipynb  WIP_bee_colony.ipynb  all_fitness.npy  bigartm.WARNING  classes_autotm.dot  datasets_preparation.ipynb  genetic_algorithm.ipynb  genetic_algorithm_surrogate_confidence.ipynb  genetic_algorithm_with_GP_COPY.ipynb  genetic_algorithm_with_random_forest.ipynb  genetic_algorithm_with_random_forest_COPY.ipynb  logging.config.yml.txt  packages_autotm.dot  plots.ipynb  pyproject.toml  requirements.txt  score_calculation.ipynb  test_experiment.ipynb
06-recurrent-networks/: 06_rnn_practice.ipynb
Notebooks/: Genetic_algorithm_baseline_SCORE_DEV.ipynb  TODO_RandomSearch.ipynb  TODO_gray_wolf_algorithm.ipynb  TODO_surrogate_modelling.ipynb  WIP_artificial_bee_colony.ipynb  WIP_bayesian_optimization .ipynb  genetic_algorithm.ipynb  genetic_algorithm_surrogate_confidence.ipynb  genetic_algorithm_with_random_forest.ipynb  logs_parser.ipynb  ontology_experiments.ipynb
autotm/: abstract_params.py  base.py  batch_vect_utils.py  clustering.py  content_splitter.py  graph_ga.py  infer.py  main.py  main_fitness_worker.py  make-recovery-file.py  params.py  params_logging_utils.py  pipeline.py  schemas.py  utils.py
conf/: autotm-job.yaml  config.yaml  irace-files-pvc-pv.yaml  irace-runner-job-abc.yaml  irace-runner-job-de.yaml  irace-runner-job-ga-with-surrogate-dt.yaml  irace-runner-job-ga-with-surrogate-gpr.yaml  irace-runner-job-ga-with-surrogate-mlp.yaml  irace-runner-job-ga-with-surrogate-rf.yaml  irace-runner-job-ga-with-surrogate-svr.yaml  irace-runner-job-ga.yaml  irace-runner-job.yaml  repeater-checkpoint-pv-pvc.yaml  repeater-job.yaml
data/: Surrogate_results_v2  make_dataset.ipynb
distributed/: README.md  pyproject.toml  setup.py
distributed/autotm_distributed/: deploy_config_generator.py  main.py  metrics.py  params_logging_utils.py  preprocessing.py  schemas.py  tasks.py  test_app.py  tm.py
distributed/charts/autotm/: values.yaml
distributed/charts/autotm/templates/: _helpers.tpl  configmaps.yaml  deployments.yaml  pvc.yaml  services.yaml
distributed/deploy/: ess-small-datasets-config.yaml  file.yaml  fitness-worker-health-checker.yaml  kube-fitness-client-job.yaml  kube-fitness-client-job.yaml.j2  kube-fitness-workers.yaml  kube-fitness-workers.yaml.j2  mlflow-minikube-persistent-volumes.yaml  mlflow-persistent-volumes.yaml  mlflow.yaml  ns.yaml  test-datasets-config.yaml
distributed/deploy/mongo_dev/: docker-compose.yaml
distributed/docker/: base.dockerfile  cli.dockerfile  client.dockerfile  flower.dockerfile  health-checker.dockerfile  mlflow-webserver.dockerfile  test.dockerfile  worker.dockerfile
distributed/kube_fitness/: test_app.py
distributed/kube_fitness/kube_fitness/: main.py  params_logging_utils.py  preprocessing.py  schemas.py  tasks.py  tm.py  utils.py
distributed/kube_fitness/test/: topic_model_test.py
distributed/test/: topic_model_test.py
docker/: autotm-job.dockerfile  exp-repeater.dockerfile  irace-base.dockerfile  irace-runner.dockerfile
docs/: algorithms_for_tuning.rst  conf.py  fitness.rst  index.rst  preprocessing.rst  visualization.rst
examples/: autotm_demo_updated (1).ipynb  autotm_demo_updated.ipynb  autotm_fit_predict.py  create_cooc_data.py  demo_autotm.ipynb  example-repeator-config.yaml  examples_autotm_fit_predict.py  full_pipeline_example.py  graph_building_for_stroitelstvo.py  graph_example.py  graph_profile_example.py  inference_example.py  log_file_test-371b9d86-a3d6-46f7-9543-6aa4be87da16..txt  log_file_test-3f796e98-cfbc-4aa8-8342-fda04c6be574..txt  log_file_test-86fc446a-9857-4115-a0a6-7917a3e01c3e..txt  log_file_test-d891daba-17d8-4009-ba36-79e5b1be3a7e..txt  log_file_test-ee6c1eda-1181-4918-a782-4b613c689852..txt  nelder_mead_experiments.py  preparation_pipeline.py  test.py  text_processing.ipynb  (+1 more)
(+396 files in other folders)
