[tool.poetry]
name = "autotm"
version = "0.1.0"
description = "Automatic hyperparameters tuning for topic models (ARTM approach) using evolutionary algorithms"
authors = [
    "Khodorchenko Maria <mariyaxod@yandex.ru>",
    "Nikolay Butakov alipoov.nb@gmail.com"
]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://autotm.readthedocs.io/en/latest/"
repository = "https://github.com/ngc436/AutoTM"
packages = [
    {include = "src/autotm"}
]


[tool.poetry.dependencies]
python = ">=3.8, <3.10"
bigartm = "0.9.2"
tqdm = "*"
numpy = "*"
PyYAML = "*"
#Jinja2 = "3.1.2"
dataclasses-json = "*"
mlflow = "*"
click = "*"
#pymysql = "0.9.3"
#psycopg2-binary = "2.8.5"
pymongo = "*"
scikit-learn = "*"
scipy = "*"
hyperopt = "*"
#navec = "0.10.0"
#seaborn = "0.11.0"
pymystem3 = "*"
nltk = "*"
plotly = "*"
spacy = "*"
spacy-langdetect = "*"
gensim = "*"
pandas = "*"
billiard = "*"
pydantic = "*"
#protobuf = "3.20.*"
dill = "*"
pytest = "*"
#SALib = "~=1.4.7"
#deap = "~=1.3.3"

[tool.poetry.dev-dependencies]
black = "*"
sphinx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"