[tool.poetry]
name = "autotm"
version = "0.2.1"
description = "Automatic hyperparameters tuning for topic models (ARTM approach) using evolutionary algorithms"
authors = [
    "Khodorchenko Maria <mariyaxod@yandex.ru>",
    "Nikolay Butakov alipoov.nb@gmail.com"
]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://autotm.readthedocs.io/en/latest/"
repository = "https://github.com/ngc436/AutoTM"
packages = [
    {include = "autotm"}
]


[tool.poetry.dependencies]
python = ">=3.8, <3.10"
bigartm = "0.9.2"
protobuf = "<=3.20.0"
tqdm = "*"
numpy = "*"
PyYAML = "*"
dataclasses-json = "*"
mlflow = "*"
click = "*"
pymongo = "*"
scikit-learn = "*"
scipy = "*"
hyperopt = "*"
pymystem3 = "*"
nltk = "*"
plotly = "*"
spacy = ">=3.5"
spacy-langdetect = "*"
gensim = "*"
pandas = "*"
billiard = "*"
pydantic = "*"
dill = "*"
pytest = "*"

[tool.poetry.dev-dependencies]
black = "*"
sphinx = "*"
flake8 = "*"

[tool.poetry.scripts]
autotmctl = 'autotm.main:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"